Project1/Project1.sdk/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
17:14:07 **** Incremental Build of configuration Debug for project ExampleC ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
make: Nothing to be done for 'main-build'.
17:14:32 **** Incremental Build of configuration Debug for project ExampleC ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ExampleC_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
../src/helloworld.c: In function 'main':
../src/helloworld.c:75:7: error: 'state' undeclared (first use in this function); did you mean 'strsep'?
       state++;
       ^~~~~
       strsep
../src/helloworld.c:75:7: note: each undeclared identifier is reported only once for each function it appears in
../src/helloworld.c:99:37: error: 'LED_CHANNEL' undeclared (first use in this function); did you mean 'LED_CHANNEL2'?
      if(XGpio_DiscreteRead(&GpioPL, LED_CHANNEL)){
                                     ^~~~~~~~~~~
                                     LED_CHANNEL2
make: *** [src/subdir.mk:26: src/helloworld.o] Error 1
17:16:01 **** Incremental Build of configuration Debug for project ExampleC ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ExampleC_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: ExampleC.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../ExampleC_bsp/ps7_cortexa9_0/lib -o "ExampleC.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: ExampleC.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size ExampleC.elf  |tee "ExampleC.elf.size"
   text	   data	    bss	    dec	    hex	filename
  29088	   1192	  22632	  52912	   ceb0	ExampleC.elf
'Finished building: ExampleC.elf.size'
' '
17:17:21 **** Incremental Build of configuration Debug for project ExampleC ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ExampleC_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: ExampleC.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../ExampleC_bsp/ps7_cortexa9_0/lib -o "ExampleC.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: ExampleC.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size ExampleC.elf  |tee "ExampleC.elf.size"
   text	   data	    bss	    dec	    hex	filename
  29088	   1192	  22632	  52912	   ceb0	ExampleC.elf
'Finished building: ExampleC.elf.size'
' '
17:17:51 **** Auto Build of configuration Debug for project ExampleC ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../ExampleC_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
'Finished building: ../src/helloworld.c'
' '
'Building target: ExampleC.elf'
'Invoking: ARM v7 gcc linker'
arm-none-eabi-gcc -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -Wl,-build-id=none -specs=Xilinx.spec -Wl,-T -Wl,../src/lscript.ld -L../../ExampleC_bsp/ps7_cortexa9_0/lib -o "ExampleC.elf"  ./src/helloworld.o ./src/platform.o   -Wl,--start-group,-lxil,-lgcc,-lc,--end-group
'Finished building target: ExampleC.elf'
' '
'Invoking: ARM v7 Print Size'
arm-none-eabi-size ExampleC.elf  |tee "ExampleC.elf.size"
   text	   data	    bss	    dec	    hex	filename
  29092	   1192	  22632	  52916	   ceb4	ExampleC.elf
'Finished building: ExampleC.elf.size'
' '
